# seared-quail

./: .env-sample  .gitignore  .travis.yml  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
menu/: admin.py  forms.py  models.py  tests.py  views.py
menu/migrations/: 0001_initial.py  0002_menuitem_img.py  0003_auto_20150514_2203.py  0004_auto_20160829_0617.py  0005_auto_20160829_0618.py  0006_category_parent.py  0007_auto_20160829_0622.py  0008_auto_20160829_0622.py  0009_auto_20160829_0624.py  0010_auto_20200412_2132.py
order/: forms.py  models.py  sockets.py  tests.py  views.py
order/management/commands/: runserver_socketio.py
order/migrations/: 0001_initial.py  0002_auto_20150506_0116.py  0003_order_completed.py
restaurant/: admin.py  models.py  tests.py
restaurant/migrations/: 0001_initial.py  0002_auto_20150612_1603.py
seared_quail/: .coveragerc  gunicorn.py  manage.py  settings.py  tests.py  urls.py  wsgi.py
seared_quail/menu/: admin.py  forms.py  models.py  tests.py  views.py
seared_quail/menu/migrations/: 0001_initial.py  0002_menuitem_img.py  0003_auto_20150514_2203.py  0004_auto_20150526_0326.py  0004_auto_20160829_0617.py  0005_auto_20160829_0618.py  0005_category_parent.py  0006_auto_20150527_0215.py  0006_category_parent.py  0007_auto_20150612_1650.py  0007_auto_20160829_0622.py  0008_auto_20160829_0622.py  0009_auto_20160829_0624.py
seared_quail/order/: admin.py  forms.py  models.py  tests.py  views.py
seared_quail/order/management/commands/: runserver_socketio.py
seared_quail/order/migrations/: 0001_initial.py  0002_auto_20150506_0116.py  0003_order_completed.py
seared_quail/restaurant/: admin.py  models.py  tests.py
seared_quail/restaurant/migrations/: 0001_initial.py  0002_auto_20150612_1603.py
seared_quail/seared_quail/: exceptions.py  gunicorn.py  settings.py  tests.py  urls.py  wsgi.py
seared_quail/seared_quail/settings/: __init__.py  base.py  travis.py
seared_quail/settings/: base.py  prod.py
static/css/: foundation.css  kitchen.css
static/js/: kitchen.js  menu.js
templates/: base.html  kitchen.html  login.html  menu.html
templates/includes/: category.html  menuitem.html
